# HR-Compliance

./: .gitignore  README.md  alerts.py  associate_lookup.py  attendance_data.py  authenticate.py  auto_publish.py  checkin_data.py  data.py  debug_data.py  email_scorecards.py  export_report.py  file_watcher.py  history_db.py  hr-compliance-autostart.xml  hr_compliance_report.html  main.py  manager_emails.cfg  notes_db.py  onedrive_client.py  points_data.py  pto_data.py  pyproject.toml  read_excel.py  report_template.html  run_auto_publish.bat  scorecard_data.py  shifts_data.py
templates/: attendance.html  attendance_manager.html  base.html  checkins.html  checkins_manager.html  home.html  index.html  leaderboard.html  lookup.html  manager.html  points.html  points_manager.html  pto.html  pto_manager.html  scorecard.html  scorecard_manager.html  send_scorecards_result.html  shifts.html  trends.html
